--- a/KUS/cv-Yekzan.html
+++ b/KUS/cv-Yekzan.html
@@ -219,7 +219,7 @@
             <a href="mailto:yekzan@icloud.com">yekzan@icloud.com</a>
         </div>
         <div class="cv-link">
-            <a href="CV-Yekzan.pdf" target="_blank">Télécharger le CV</a>
+            <a href="cv-Yekzan.pdf" target="_blank">Télécharger le CV</a>
         </div>
     </div>
 </body>
